1, Fix leaf-footer z-index; 2, Fix leaf-datepicker ng-model always undefined

--- a/scss/leaf/_main.scss
+++ b/scss/leaf/_main.scss
@@ -87,7 +87,7 @@ leaf-header {
     top: 0;
     height: 60px;
     width: 100%;
-    z-index: 9999;
+    z-index: 9998;
 }
 
 leaf-footer {
@@ -95,7 +95,7 @@ leaf-footer {
     bottom: 0;
     height: 60px;
     width: 100%;
-    z-index: 9999;
+    z-index: 9998;
 }
 
 .leaf-content-wrapper {
